Fixed return button disappearing on mobile view as well

--- a/src/components/BookDetails/BookDetails.css
+++ b/src/components/BookDetails/BookDetails.css
@@ -174,7 +174,7 @@
     display: none;
   }
 
-  .bd-text-box > .rent-button {
+  .bd-text-box > button {
     display: block;
   }
 
